@@ -1,3 +1,7 @@
+2001-10-01  Michael Meeks  <michael@ximian.com>
+
+	* gconf/gconf.c (ctable_remove_by_client_id): remove unused.
+
 2001-09-28  Havoc Pennington  <hp@redhat.com>
 
 	* gconf/gconf-internals.c (gconf_get_current_lock_holder): we read
